[package]
name = "readibility_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
dom_smoothie = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[build-dependencies]
napi-build = "2"

[patch.crates-io]
dom_smoothie = { path = "dom_smoothie" }

[dev-dependencies]
dom_query = "0.12"
